--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
         <title>Mulycyl Ciphers</title>
     </head>
     <body>
-        <p>Hi</p>
+        <h1>Mulycyl Cipher Tool</h1>
+        <h2>Currently Developed:</h2>
+        <p>Ciphers: Caesar, atbash, vigenere, and more!</p>
+        <p>Text Manipulation: English <---> GP Conversion</p>
+        <p>Text Statistics: Delta Streams, Index of Coincidence, Frequency Analysis, and more!</p>
+        <p>Hashes</p>
+        <h2>Work in Progress:</h2>
+        <p>Ciphers: Columnar transposition, autokey</p>
+        <h2>To be Developed:</h2>
+        <p>More ciphers</p>
+        <p>Fully functioning web interface!</p>
     </body>
 </html>
