--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <body>
         <h1>Mulycyl Cipher Tool</h1>
         <h2>Currently Developed:</h2>
-        <p>Ciphers: Caesar, atbash, vigenere, and more!</p>
-        <p>Text Manipulation: English <---> GP Conversion</p>
-        <p>Text Statistics: Delta Streams, Index of Coincidence, Frequency Analysis, and more!</p>
-        <p>Hashes</p>
+        <p>&emsp;Ciphers: Caesar, atbash, vigenere, and more!</p>
+        <p>&emsp;Text Manipulation: English <---> GP Conversion</p>
+        <p>&emsp;Text Statistics: Delta Streams, Index of Coincidence, Frequency Analysis, and more!</p>
+        <p>&emsp;Hashes</p>
         <h2>Work in Progress:</h2>
-        <p>Ciphers: Columnar transposition, autokey</p>
+        <p>&emsp;Ciphers: Columnar transposition, autokey</p>
         <h2>To be Developed:</h2>
-        <p>More ciphers</p>
-        <p>Fully functioning web interface!</p>
+        <p>&emsp;More ciphers</p>
+        <p>&emsp;Fully functioning web interface!</p>
     </body>
 </html>
