--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Mulycyl Cipher Tool</h1>
         <h2>Currently Developed:</h2>
-        <p>&emsp;Ciphers: Caesar, atbash, vigenere, and more!</p>
+        <p style="font-family: Arial">&emsp;Ciphers: Caesar, atbash, vigenere, and more!</p>
         <p>&emsp;Text Manipulation: English <---> GP Conversion</p>
         <p>&emsp;Text Statistics: Delta Streams, Index of Coincidence, Frequency Analysis, and more!</p>
         <p>&emsp;Hashes</p>
