--- a/documentation.html
+++ b/documentation.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <p>testing testing testing </p>
+    <style>
+        html * {
+  		font-family: Courier New;
+	    }
+    </style>
+    <h1>Documentation</h1>
+    <a href="https://mulycyl.github.io/index.html">Home</a>
+    <a href=history.back()>Back</a>
 </html>
