--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<style>
-	html * {
-  	font-family: Courier New;
-	}
-</style>
+		<style>
+				html * {
+  					font-family: Courier New;
+				}
+		</style>
     <head>
         <title>Mulycyl Ciphers</title>
     </head>
@@ -25,6 +25,8 @@
         <p>&emsp;Fully functioning web interface!</p>
         
         <h2>Documentation (WIP)</h2>
-        <a href="https://mulycyl.github.io/documentation.html">Visit the Documentation Page!</a>
+        <a href=documentation.html>Visit the Documentation Page!</a>
+    	<br><br><br>
+    	<a href=javascript:history.back()>Back</a>
     </body>
 </html>
