--- a/documentation.html
+++ b/documentation.html
@@ -6,6 +6,8 @@
 	    }
     </style>
     <h1>Documentation</h1>
-    <a href="https://mulycyl.github.io/index.html">Home</a>
-    <a href=history.back()>Back</a>
+    <p>WIP</p>
+    <br><br><br>
+    <a href=index.html>Home</a>
+    <a href=javascript:history.back()>Back</a>
 </html>
