--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 				}
 		</style>
     <head>
-        <title>Mulycyl Ciphers</title>
+        <title>Cipher Tool</title>
     </head>
     <body>
-        <h1>Mulycyl Cipher Tool</h1>
+        <h1>Cipher Tool</h1>
         
         <h2>Currently Developed</h2>
         <p>&emsp;Ciphers: Caesar, atbash, vigenere, and more!</p>
